Creado mediante Colaboratory

--- a/pia.ipynb
+++ b/pia.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM3zx0LOuk6pgVRRUelGQO4",
+      "authorship_tag": "ABX9TyMrsEdjNpW6iljR0SI7f2RK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,8 +37,11 @@
         "        if self.programa == 1:\n",
         "            # Programa de descuento en tienda\n",
         "            class Tienda:\n",
-        "                def __init__(self, compra):\n",
-        "                    self.compra = compra\n",
+        "                def __init__(self):\n",
+        "                    self.compra = 0\n",
+        "\n",
+        "                def obtener_datos_compra(self):\n",
+        "                    self.compra = float(input(\"Ingrese el monto de la compra: \"))\n",
         "\n",
         "                def descuento_clientes(self):\n",
         "                    pagar = self.compra\n",
@@ -54,16 +57,22 @@
         "                        pagar = self.compra - (self.compra * 0.25)\n",
         "                    return pagar\n",
         "\n",
-        "            tienda = Tienda(2000)\n",
+        "            tienda = Tienda()\n",
+        "            tienda.obtener_datos_compra()\n",
         "            print(tienda.descuento_clientes())\n",
         "\n",
         "        elif self.programa == 2:\n",
-        "            # Programa de información de dinosaurio\n",
+        "            # Programa dinosaurio\n",
         "            class Dinosaurio:\n",
-        "                def __init__(self, NOM, PES, LON):\n",
-        "                    self.NOM = NOM\n",
-        "                    self.PES = PES\n",
-        "                    self.LON = LON\n",
+        "                def __init__(self):\n",
+        "                    self.NOM = \"\"\n",
+        "                    self.PES = 0\n",
+        "                    self.LON = 0\n",
+        "\n",
+        "                def obtener_datos_dinosaurio(self):\n",
+        "                    self.NOM = input(\"Ingrese el nombre del dinosaurio: \")\n",
+        "                    self.PES = float(input(\"Ingrese el peso del dinosaurio en libras: \"))\n",
+        "                    self.LON = float(input(\"Ingrese la longitud del dinosaurio en pies: \"))\n",
         "                    self.PESKIL = self.PES * 0.45359237  # 1 libra = 0.45359237 kg\n",
         "                    self.LONMET = self.LON * 0.3048  # 1 pie = 0.3048 metros\n",
         "\n",
@@ -72,56 +81,42 @@
         "                    print(f\"Peso del dinosaurio (en kg): {self.PESKIL}\")\n",
         "                    print(f\"Longitud del dinosaurio (en m): {self.LONMET}\")\n",
         "\n",
-        "            nombre = \"T-Rex\"\n",
-        "            peso = 12000  # libras\n",
-        "            longitud = 150  # pies\n",
-        "\n",
-        "            dinosaurio1 = Dinosaurio(nombre, peso, longitud)\n",
-        "            dinosaurio1.dinosaurio()\n",
+        "            dinosaurio = Dinosaurio()\n",
+        "            dinosaurio.obtener_datos_dinosaurio()\n",
+        "            dinosaurio.dinosaurio()\n",
         "\n",
         "        elif self.programa == 3:\n",
-        "            # Programa de costo de gasolina en estación de servicio\n",
+        "            # Programa gasolinera\n",
         "            class EstacionDeServicio:\n",
-        "                def __init__(self, galones):\n",
-        "                    self.GAL = galones\n",
-        "                    self.TOTAL = 0  # Inicializamos el total en cero al inicio\n",
+        "                def __init__(self):\n",
+        "                    self.GAL = 0\n",
+        "                    self.TOTAL = 0\n",
+        "\n",
+        "                def obtener_cantidad_galones(self):\n",
+        "                    cantidad_galones_usuario = float(input(\"Ingrese la cantidad de galones: \"))\n",
+        "                    self.GAL = cantidad_galones_usuario\n",
         "\n",
         "                def gasolina(self):\n",
-        "                    litros = self.GAL * 3.785  # Convertir galones a litros\n",
+        "                    litros = self.GAL * 3.785\n",
         "                    precio_por_litro = 8.20\n",
-        "                    self.TOTAL = litros * precio_por_litro  # Calcular el costo total\n",
-        "                    return self.TOTAL  # Devolver el total a pagar por el cliente\n",
+        "                    self.TOTAL = litros * precio_por_litro\n",
+        "                    return self.TOTAL\n",
         "\n",
-        "            cantidad_de_galones = 10\n",
-        "            estacion = EstacionDeServicio(cantidad_de_galones)\n",
+        "            estacion = EstacionDeServicio()\n",
+        "            estacion.obtener_cantidad_galones()\n",
         "            total_a_pagar = estacion.gasolina()\n",
-        "            print(f\"El total a pagar por {cantidad_de_galones} galones es: ${total_a_pagar:.2f}\")\n",
+        "            print(f\"El total a pagar por {estacion.GAL} galones es: ${total_a_pagar:.2f}\")\n",
         "\n",
-        "# Solicitar al usuario que ingrese el número del programa a ejecutar\n",
+        "\n",
         "programa_a_ejecutar = int(input(\"Ingrese el número del programa a ejecutar (1, 2 o 3): \"))\n",
         "ejecutor = Tres_programas(programa_a_ejecutar)\n",
         "ejecutor.ejecutar_programa()\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ukEx6V--Qw7Q",
-        "outputId": "4291e8dc-094a-4958-f37f-755698fca6de"
+        "id": "ukEx6V--Qw7Q"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Ingrese el número del programa a ejecutar (1, 2 o 3): 2\n",
-            "Nombre del dinosaurio: T-Rex\n",
-            "Peso del dinosaurio (en kg): 5443.10844\n",
-            "Longitud del dinosaurio (en m): 45.72\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
